<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/abc_list_divider_mtrl_alpha"
    android:dividerPadding="5dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:showDividers="end"
    tools:context="minaz.devcafe.devcafe.IdeaDetailActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idea_detail_ideaTitle_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ideaTitle"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:id="@+id/idea_detail_ideaOwner_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:text="@string/ideaOwner"
            android:textAppearance="?android:textAppearanceSmall" />

    </RelativeLayout>

    <TextView
        android:id="@+id/idea_detail_ideaDescription_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ideaDescription"
        android:textAppearance="?android:textAppearanceSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/abc_dialog_list_padding_vertical_material"
        android:text="@string/comments"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/bright_foreground_disabled_material_light" />

    <ListView
        android:id="@+id/commentListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>
